--- a/app/globals.css
+++ b/app/globals.css
@@ -14,15 +14,64 @@
 @layer base {
   :root {
     --background: 120 70% 95%;
-    --foreground: 120 100% 50%;
-    --primary: 120 50% 4%;
+    --foreground: 120 100% 45%;
+
+    --card: 120 50% 100%;
+    --card-foreground: 120 0% 4%;
+
+    --popover: 120 50% 100%;
+    --popover-foreground: 120 50% 4%;
+
+    --primary: 120 50% 5%;
+    --primary-foreground: 120 50% 98%;
+
+    --secondary: 120 50% 96.1%;
+    --secondary-foreground: 120 50% 9%;
+
+    --muted: 120 50% 96.1%;
+    --muted-foreground: 120 50% 45%;
+
+    --accent: 120 50% 96.1%;
+    --accent-foreground: 120 50% 9%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 120 50% 98%;
+
+    --border: 120 50% 89.8%;
+    --input: 120 50% 89.8%;
+    --ring: 120 50% 4%;
+
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 120 50% 4%;
-    --foreground: 120 100% 50%;
+    --background: 120 70% 4%;
+    --foreground: 120 100% 45%;
+
+    --card: 120 50% 4%;
+    --card-foreground: 120 50% 98%;
+
+    --popover: 120 50% 4%;
+    --popover-foreground: 120 50% 98%;
+
     --primary: 120 50% 95%;
+    --primary-foreground: 120 50% 9%;
+
+    --secondary: 120 50% 14.9%;
+    --secondary-foreground: 120 50% 98%;
+
+    --muted: 120 50% 14.9%;
+    --muted-foreground: 120 50% 64%;
+
+    --accent: 120 50% 14.9%;
+    --accent-foreground: 120 50% 98%;
+
+    --destructive: 0 90% 55%;
+    --destructive-foreground: 0 50% 98%;
+
+    --border: 120 50% 14.9%;
+    --input: 120 50% 14.9%;
+    --ring: 120 50% 83.1%;
   }
 }
 
@@ -100,7 +149,7 @@
 
 @layer utilities {
   .wrapper {
-    @apply max-w-7xl lg:mx-auto py-5 px-5 md:px-12 w-full;
+    @apply max-w-7xl 2xl:max-w-[90rem] lg:mx-auto py-5 px-5 md:px-12 w-full;
   }
 
   .flex-center {
